fix: update dockerfilePath and CMD in Dockerfile for correct configuration

--- a/spu/railway.toml
+++ b/spu/railway.toml
@@ -1,6 +1,6 @@
 [build]
 builder = "DOCKERFILE"
-dockerfilePath = "Dockerfile.spu"
+dockerfilePath = "sc/Dockerfile.spu"
 
 [deploy]
 restartPolicyType = "ON_FAILURE"
