refactor: consolidate Dockerfile paths and enhance startup scripts for SPU and registrar

--- a/sc/railway.toml
+++ b/sc/railway.toml
@@ -1,6 +1,6 @@
 [build]
 builder = "DOCKERFILE"
-dockerfilePath = "sc/Dockerfile.sc"
+dockerfilePath = "sc/Dockerfile"
 
 [deploy]
 # healthcheckPath = "/"
