--- a/registrar/railway.toml
+++ b/registrar/railway.toml
@@ -1,7 +1,7 @@
 [build]
 builder = "DOCKERFILE"
-dockerfilePath = "spu/Dockerfile"
+dockerfilePath = "registrar/Dockerfile"
 
 [deploy]
 restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 2
+restartPolicyMaxRetries = 10
