fix: update Dockerfile for registrar to simplify build process and correct dockerfilePath

--- a/registrar/Dockerfile
+++ b/registrar/Dockerfile
@@ -1,10 +1,6 @@
-FROM rust:alpine AS builder
-RUN apk add --no-cache musl-dev openssl-dev
-RUN cargo install fluvio --version 0.17.3
-
 FROM alpine:latest
-RUN apk add --no-cache openssl netcat-openbsd
-COPY --from=builder /usr/local/cargo/bin/fluvio /usr/local/bin/fluvio
+RUN apk add --no-cache curl openssl netcat-openbsd
+RUN curl -fsS https://hub.infinyon.cloud/install/install.sh | sh -s -- --path /usr/local/bin
 COPY register-spu.sh /
 RUN chmod +x /register-spu.sh
 CMD ["/register-spu.sh"]
