--- a/registrar/railway.toml
+++ b/registrar/railway.toml
@@ -1,6 +1,6 @@
 [build]
 builder = "DOCKERFILE"
-dockerfilePath = "Dockerfile"
+dockerfilePath = "registrar/Dockerfile"
 
 [deploy]
 restartPolicyType = "ON_FAILURE"
