--- a/registrar/railway.toml
+++ b/registrar/railway.toml
@@ -3,5 +3,4 @@ builder = "DOCKERFILE"
 dockerfilePath = "registrar/Dockerfile"
 
 [deploy]
-restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 10
+restartPolicyType = "NEVER"
