--- a/registrar/Dockerfile
+++ b/registrar/Dockerfile
@@ -1,9 +1,9 @@
 FROM alpine:latest
 
-RUN apk add --no-cache curl openssl netcat-openbsd
-RUN curl -fsS https://hub.infinyon.cloud/install/install.sh | sh -s -- --path /usr/local/bin
+RUN apk add --no-cache curl openssl netcat-openbsd bash
+RUN curl -fsS https://hub.infinyon.cloud/install/install.sh | bash
+ENV PATH="/root/.fvm/bin:/root/.fluvio/bin:${PATH}"
 
 COPY register-spu.sh /
 RUN chmod +x /register-spu.sh
-# CMD ["/register-spu.sh"]
-CMD ["/bin/sh"]
+CMD ["/register-spu.sh"]
