--- a/bastion/railway.toml
+++ b/bastion/railway.toml
@@ -1,6 +1,6 @@
 [build]
 builder = "DOCKERFILE"
-dockerfilePath = "./Dockerfile"
+dockerfilePath = "bastion/Dockerfile"
 
 [deploy]
 numReplicas = 1
