fix: remove optional non-root user creation and duplicate shell prompt setup in Dockerfile

--- a/bastion/Dockerfile
+++ b/bastion/Dockerfile
@@ -22,13 +22,8 @@ RUN apk add --no-cache \
     zsh \
     shadow
 
-# Create a non-root user (optional, Railway SSH already provides root)
-RUN adduser -D -s /bin/bash bastion && \
-    echo "bastion:bastion" | chpasswd
-
-# Set up a nice shell prompt
-RUN echo 'export PS1="\[\033[01;32m\]\u@bastion\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]$ "' >> /root/.bashrc && \
-    echo 'export PS1="\[\033[01;32m\]\u@bastion\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]$ "' >> /home/bastion/.bashrc
+# Set up shell prompt
+RUN echo 'export PS1="\[\033[01;32m\]\u@bastion\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]$ "' >> /root/.bashrc
 
 # Keep container running
 CMD ["tail", "-f", "/dev/null"]
